--- a/frontend/index.html
+++ b/frontend/index.html
@@ -7,6 +7,7 @@
       crossorigin="anonymous"
     ></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" type="image/ico" href="/images/SimpleFixFavicon.ico" />
     <title>SimpleFix</title>
   </head>
   <body>
